@@ -1,3 +1,14 @@
+Sun Nov 28 15:51:40 2004  Kouhei Sutou  <kou@cozmixng.org>
+
+	* lib/rss/rss.rb (RSS::NotSetError): added.
+	
+	* lib/rss/maker/{1.0,0.9,2.0}.rb: changed RSS Maker to raise
+	  RSS::NotSetError if required values of maker.channel are not
+	  set.
+
+	* test/rss/test_maker_{1.0,0.9,2.0}.rb: changed tests to check RSS
+	  Maker raises or not.
+
 Sun Nov 28 12:14:47 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>
 
 	* regparse.c (fetch_token): fixed test failure on HP-UX ia64
